--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Homebody'
+title: 'Ecommerce, Shopify Native, Headless CMS'
+name: 'Homebody'
 publishedAt: '2023-07'
 summary: ''
 ---
