--- a/app/work/posts/supervibe.mdx
+++ b/app/work/posts/supervibe.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Supervibe'
+title: 'Ecommerce, Shopify Native, Headless CMS'
+name: 'Supervibe'
 publishedAt: '2022-12'
 summary: ''
 ---
