--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Vybevape'
+title: 'Ecommerce, Shopify Native, Headless CMS'
+name: 'Vybevape'
 publishedAt: '2022-10'
 summary: ''
 ---
