--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Wavytalk'
+title: 'Ecommerce, Shopify Native, Headless CMS'
+name: 'Wavytalk'
 publishedAt: '2024-08'
 summary: ''
 ---
