--- a/app/work/posts/crescentdays.mdx
+++ b/app/work/posts/crescentdays.mdx
@@ -1,5 +1,6 @@
 ---
-title: 'Crescent Days'
+title: 'Ecommerce, Shopify Native, Headless CMS'
+name: 'Crescent Days'
 publishedAt: '2023-09'
 summary: ''
 ---
