--- a/app/work/posts/crescentdays.mdx
+++ b/app/work/posts/crescentdays.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Crescent Days'
 publishedAt: '2023-09'
 summary: ''
