--- a/app/work/posts/deeps.mdx
+++ b/app/work/posts/deeps.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Deeps'
 publishedAt: '2022-04'
 summary: ''
