--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Wavytalk'
 publishedAt: '2024-08'
 summary: ''
