--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Homebody'
 publishedAt: '2023-07'
 summary: ''
