--- a/app/work/posts/igloo.mdx
+++ b/app/work/posts/igloo.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Igloo'
 publishedAt: '2023-11'
 summary: ''
