--- a/app/work/posts/joymode.mdx
+++ b/app/work/posts/joymode.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Joymode'
 publishedAt: '2024-07'
 summary: ''
