--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Ecommerce, Shopify Native, Headless CMS'
+title: 'Ecommerce, Shopify Native'
 name: 'Vybevape'
 publishedAt: '2022-10'
 summary: ''
