--- a/app/work/posts/deeps.mdx
+++ b/app/work/posts/deeps.mdx
@@ -5,11 +5,19 @@ publishedAt: '2022-04'
 summary: ''
 ---
 
+***
+
+### Home hero
+
 Hero section with a full-width image and responsive design, ensuring a visually impactful experience across all devices.
 
 ![alt text](/images/deeps/Deeps-1.jpeg)
 
 ![alt text](/images/deeps/Deeps-3.jpeg)
+
+***
+
+### Custom slider
 
 Responsive slider controlled by logos, allowing users to navigate through content easily by selecting brand icons for a customized browsing experience.
 
@@ -19,6 +27,10 @@ Responsive slider controlled by logos, allowing users to navigate through conten
 
 ![alt text](/images/deeps/Deeps-4.jpeg)
 
+***
+ 
+### Footer and bottom marquee
+
 Bottom marquee and responsive footer, providing continuous updates and essential links that adapt seamlessly to any device for easy access.
 
 ![alt text](/images/deeps/Deeps-8.jpeg)
@@ -26,5 +38,7 @@ Bottom marquee and responsive footer, providing continuous updates and essential
 ![alt text](/images/deeps/Deeps-9.jpeg)
 
 ![alt text](/images/deeps/Deeps-6.jpeg)
+
+***
 
 [Deeps](https://getdeeps.com/)
