--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -5,11 +5,19 @@ publishedAt: '2023-07'
 summary: ''
 ---
 
+***
+
+### Custom sliders
+
 Two unique sliders: one for showcasing featured images and another for highlighting customer testimonials, each designed to enhance user engagement with smooth, interactive transitions.
 
 ![alt text](/images/homebody/Homebody-1.jpeg)
 
 ![alt text](/images/homebody/Homebody-6.jpeg)
+
+***
+
+### Instagram marquee
 
 An Instagram highlights marquee that displays curated content, allowing users to easily view.
 
@@ -17,11 +25,16 @@ An Instagram highlights marquee that displays curated content, allowing users to
 
 ![alt text](/images/homebody/Homebody-3.jpeg)
 
+***
+
+### Responsive design
+
 Responsive designs tailored for mobile devices, ensuring optimal layout and usability on smartphones for a seamless user experience.
 
 ![alt text](/images/homebody/Homebody-4.jpeg)
 
 ![alt text](/images/homebody/Homebody-2.jpeg)
 
+***
 
 [Homebody](https://stayhomebody.com/)
