--- a/app/work/posts/joymode.mdx
+++ b/app/work/posts/joymode.mdx
@@ -5,6 +5,10 @@ publishedAt: '2024-07'
 summary: ''
 ---
 
+***
+
+### Landing page
+
 Creation of landing pages with versatile designs, allowing sections to be reused across multiple pages for a cohesive and flexible layout.
 
 ![alt text](/images/joymode/Joymode-1.jpeg)
@@ -17,5 +21,6 @@ Creation of landing pages with versatile designs, allowing sections to be reused
 
 ![alt text](/images/joymode/Joymode-3.jpeg)
 
+***
 
 [Joymode](https://www.tryjoymode.com/)
