--- a/app/work/posts/supervibe.mdx
+++ b/app/work/posts/supervibe.mdx
@@ -5,6 +5,10 @@ publishedAt: '2022-12'
 summary: ''
 ---
 
+***
+
+### Floating elements
+
 An interactive website featuring multiple floating elements that engage users through animations and interactions, enhancing the overall experience and encouraging exploration.
 
 ![alt text](/images/supervibe/Supervibe-1.jpeg)
@@ -13,16 +17,26 @@ An interactive website featuring multiple floating elements that engage users th
 
 ![alt text](/images/supervibe/Supervibe-4.jpeg)
 
+***
+
+### Product cards
+
 Interactive product cards that engage users with animations, enhancing the shopping experience.
 
 ![alt text](/images/supervibe/Supervibe-5.jpeg)
 
 ![alt text](/images/supervibe/Supervibe-6.jpeg)
 
+*** 
+
+### Responsive menu and minicart 
+
 A responsive menu and mini cart designed for seamless navigation and easy access to shopping features on any device, enhancing user convenience.
 
 ![alt text](/images/supervibe/Supervibe-2.jpeg)
 
 ![alt text](/images/supervibe/Supervibe-3.jpeg)
+
+***
 
 [Supervibe](https://supervibe.co/)
