--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -5,11 +5,19 @@ publishedAt: '2022-10'
 summary: ''
 ---
 
+***
+
+### PDP hero
+
 A simple website design focused on showcasing products and facilitating sales, providing a user-friendly experience that makes browsing and purchasing easy.
 
 ![alt text](/images/vybevape/Vybevape-5.jpeg)
 
-![alt text](/images/vybevape/Vybevape-2.jpeg)
+![alt text](/images/vybevape/Vybevape-1.jpeg)
+
+***
+
+### Collection page
 
 A product grid displaying items in a clean, organized layout, allowing users to browse products easily and quickly access key information and purchase options.
 
@@ -19,10 +27,16 @@ A product grid displaying items in a clean, organized layout, allowing users to 
 
 ![alt text](/images/vybevape/Vybevape-6.jpeg)
 
+***
+
+### Footer
+
 A responsive footer designed to adapt to any device, featuring essential links, contact information, and social media icons for easy navigation and accessibility.
 
-![alt text](/images/vybevape/Vybevape-1.jpeg)
+![alt text](/images/vybevape/Vybevape-2.jpeg)
 
 ![alt text](/images/vybevape/Vybevape-7.jpeg)
+
+***
 
 [Vybevape](https://puffvybe.com/)
