--- a/app/work/posts/igloo.mdx
+++ b/app/work/posts/igloo.mdx
@@ -5,22 +5,40 @@ publishedAt: '2023-11'
 summary: ''
 ---
 
+***
+
+### PDP hero
+
 Responsive product detail page (PDP) with options and information tabs for each product, allowing users to explore details and make selections easily on any device.
 
 ![alt text](/images/igloo/Igloo-6.jpg)
 
 ![alt text](/images/igloo/Igloo-5.jpg)
 
+***
+
+### FAQs page
+
 FAQs page with tabs organizing questions by category, making it easy for users to find answers quickly and efficiently.
 
 ![alt text](/images/igloo/Igloo-1.jpg)
 
+***
+
+### Collection page
+
 Responsive collection page that allows users to filter between collections.
 
-![alt text](/images/igloo/Igloo-2.jpg)
+![alt text](/images/igloo/Igloo-2.jpeg)
 
-A double marquee displaying curated images with usernames that link directly to their Instagram profile.
+***
+
+### Double marquee
+
+Double marquee displaying curated images with usernames that link directly to their Instagram profile.
 
 ![alt text](/images/igloo/Igloo-4.jpeg)
+
+***
 
 [Igloo](https://igloo.shop/)
