--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -5,13 +5,21 @@ publishedAt: '2024-08'
 summary: ''
 ---
 
-A website dedicated to selling high-quality hair tools, featuring product highlights, customer reviews, and easy purchasing options.
+***
+
+### Hero
+
+Website dedicated to selling high-quality hair tools, featuring product highlights, customer reviews, and easy purchasing options.
 
 ![alt text](/images/wavytalk/Wavytalk-1.jpeg)
 
 ![alt text](/images/wavytalk/Wavytalk-3.jpeg)
 
-A collection page with filtering and sorting options, allowing users to easily browse and find specific items based on preferences.
+***
+
+### Collection page
+
+Collection page with filtering and sorting options, allowing users to easily browse and find specific items based on preferences.
 
 ![alt text](/images/wavytalk/Wavytalk-5.jpeg)
 
@@ -19,14 +27,24 @@ A collection page with filtering and sorting options, allowing users to easily b
 
 ![alt text](/images/wavytalk/Wavytalk-4.jpeg)
 
-A section with a complex, responsive design that adapts seamlessly to different device sizes, ensuring an optimal user experience across all screens.
+***
+
+### Repeatable section
+
+Section with a complex, responsive design that adapts seamlessly to different device sizes, ensuring an optimal user experience across all screens.
 
 ![alt text](/images/wavytalk/Wavytalk-7.jpeg)
 
 ![alt text](/images/wavytalk/Wavytalk-2.jpeg)
 
-A product card slider with hover transitions, allowing users to scroll through items and view additional details on hover for a more interactive experience.
+***
+
+### Product slider
+
+Product card slider with hover transitions, allowing users to scroll through items and view additional details on hover for a more interactive experience.
 
 ![alt text](/images/wavytalk/Wavytalk-8.jpeg)
+
+***
 
 [Wavytalk](https://wavytalk.com/)
