--- a/app/work/posts/crescentdays.mdx
+++ b/app/work/posts/crescentdays.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Crescent Days'
 publishedAt: '2023-09'
 summary: ''
+image: '/images/crescent-days/Crescentdays-4.jpeg'
 ---
 
 ***
