--- a/app/work/posts/deeps.mdx
+++ b/app/work/posts/deeps.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Deeps'
 publishedAt: '2022-04'
 summary: ''
+image: '/images/deeps/Deeps-1.jpeg'
 ---
 
 ***
