--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Homebody'
 publishedAt: '2023-07'
 summary: ''
+image: '/images/homebody/Homebody-1.jpeg'
 ---
 
 ***
