--- a/app/work/posts/igloo.mdx
+++ b/app/work/posts/igloo.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Igloo'
 publishedAt: '2023-11'
 summary: ''
+image: '/images/igloo/Igloo-6.jpg'
 ---
 
 ***
