--- a/app/work/posts/joymode.mdx
+++ b/app/work/posts/joymode.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Joymode'
 publishedAt: '2024-07'
 summary: ''
+image: '/images/joymode/Joymode-1.jpeg'
 ---
 
 ***
