--- a/app/work/posts/park-ave.mdx
+++ b/app/work/posts/park-ave.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, PHP, Headless CMS'
 name: 'Park Ave'
 publishedAt: '2024-01'
 summary: ''
+image: '/images/park-ave/Parkave-1.jpeg'
 ---
 
 ***
