--- a/app/work/posts/supervibe.mdx
+++ b/app/work/posts/supervibe.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Supervibe'
 publishedAt: '2022-12'
 summary: ''
+image: '/images/supervibe/Supervibe-1.jpeg'
 ---
 
 ***
