--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Wavytalk'
 publishedAt: '2024-08'
 summary: ''
+image: '/images/wavytalk/Wavytalk-1.jpeg'
 ---
 
 ***
