--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -3,6 +3,7 @@ title: 'Ecommerce, Shopify Native'
 name: 'Vybevape'
 publishedAt: '2022-10'
 summary: ''
+image: '/images/vybevape/Vybevape-5.jpeg'
 ---
 
 ***
