--- a/app/work/posts/crescentdays.mdx
+++ b/app/work/posts/crescentdays.mdx
@@ -1,16 +1,18 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'Dynamic & animated blog page, Shopify Native'
 name: 'Crescent Days'
 publishedAt: '2023-09'
 summary: ''
 image: '/images/crescent-days/Crescentdays-4.jpeg'
+link: 'https://crescentdays.com/blogs/blog-index'
 ---
+A dynamic and interactive blog page designed to engage users and encourage participation. It features well-structured, categorized articles. Animation that syncs the sidebar menu with article headings: clicking on a menu item smoothly scrolls to the selected section, making navigation seamless.
+
+Interactive blog carousel featuring slides of highlighted articles with images, titles, and brief descriptions for easy browsing.
 
 ***
 
 ### Blog hero
-
-A dynamic and interactive blog page designed to engage users and encourage participation. It features well-structured, categorized articles.
 
 ![alt text](/images/crescent-days/Crescentdays-4.jpeg)
 ![alt text](/images/crescent-days/Crescentdays-2.jpeg)
@@ -19,8 +21,6 @@ A dynamic and interactive blog page designed to engage users and encourage parti
 
 ### Article page
 
-Animation that syncs the sidebar menu with article headings: clicking on a menu item smoothly scrolls to the selected section, making navigation seamless.
-
 ![alt text](/images/crescent-days/Crescentdays-3.jpeg)
 ![alt text](/images/crescent-days/Crescentdays-5.jpeg)
 
@@ -28,19 +28,11 @@ Animation that syncs the sidebar menu with article headings: clicking on a menu 
 
 ### Blog carousel
 
-Interactive blog carousel featuring slides of highlighted articles with images, titles, and brief descriptions for easy browsing.
-
 ![alt text](/images/crescent-days/Crescentdays-7.jpeg)
 
 ***
 
 ### Footer
 
-Clean and functional footer with quick links, contact information, and social media icons, designed to enhance navigation and accessibility across the site.
-
 ![alt text](/images/crescent-days/Crescentdays-6.jpeg)
 ![alt text](/images/crescent-days/Crescentdays-1.jpeg)
-
-***
-
-[Crescent Days](https://crescentdays.com/blogs/blog-index)
