--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -1,16 +1,19 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'D2C high end couches, Shopify Native'
 name: 'Homebody'
 publishedAt: '2023-07'
 summary: ''
 image: '/images/homebody/Homebody-1.jpeg'
+link: 'https://stayhomebody.com'
 ---
+
+Two unique sliders: one for showcasing featured images and another for highlighting customer testimonials, each designed to enhance user engagement with smooth, interactive transitions.
+An Instagram highlights marquee that displays curated content, allowing users to easily view.
+Responsive designs tailored for mobile devices, ensuring optimal layout and usability on smartphones for a seamless user experience.
 
 ***
 
 ### Custom sliders
-
-Two unique sliders: one for showcasing featured images and another for highlighting customer testimonials, each designed to enhance user engagement with smooth, interactive transitions.
 
 ![alt text](/images/homebody/Homebody-1.jpeg)
 
@@ -20,8 +23,6 @@ Two unique sliders: one for showcasing featured images and another for highlight
 
 ### Instagram marquee
 
-An Instagram highlights marquee that displays curated content, allowing users to easily view.
-
 ![alt text](/images/homebody/Homebody-5.jpeg)
 
 ![alt text](/images/homebody/Homebody-3.jpeg)
@@ -30,12 +31,6 @@ An Instagram highlights marquee that displays curated content, allowing users to
 
 ### Responsive design
 
-Responsive designs tailored for mobile devices, ensuring optimal layout and usability on smartphones for a seamless user experience.
-
 ![alt text](/images/homebody/Homebody-4.jpeg)
 
 ![alt text](/images/homebody/Homebody-2.jpeg)
-
-***
-
-[Homebody](https://stayhomebody.com/)
