--- a/app/work/posts/igloo.mdx
+++ b/app/work/posts/igloo.mdx
@@ -1,16 +1,20 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'Merch store for a top web3 brand, Shopify Native'
 name: 'Igloo'
 publishedAt: '2023-11'
 summary: ''
 image: '/images/igloo/Igloo-6.jpg'
+link: 'https://igloo.shop'
 ---
+
+Responsive product detail page (PDP) with options and information tabs for each product, allowing users to explore details and make selections easily on any device.
+FAQs page with tabs organizing questions by category, making it easy for users to find answers quickly and efficiently.
+Responsive collection page that allows users to filter between collections.
+Double marquee displaying curated images with usernames that link directly to their Instagram profile.
 
 ***
 
 ### PDP hero
-
-Responsive product detail page (PDP) with options and information tabs for each product, allowing users to explore details and make selections easily on any device.
 
 ![alt text](/images/igloo/Igloo-6.jpg)
 
@@ -20,15 +24,11 @@ Responsive product detail page (PDP) with options and information tabs for each 
 
 ### FAQs page
 
-FAQs page with tabs organizing questions by category, making it easy for users to find answers quickly and efficiently.
-
 ![alt text](/images/igloo/Igloo-1.jpg)
 
 ***
 
 ### Collection page
-
-Responsive collection page that allows users to filter between collections.
 
 ![alt text](/images/igloo/Igloo-2.jpeg)
 
@@ -36,10 +36,4 @@ Responsive collection page that allows users to filter between collections.
 
 ### Double marquee
 
-Double marquee displaying curated images with usernames that link directly to their Instagram profile.
-
 ![alt text](/images/igloo/Igloo-4.jpeg)
-
-***
-
-[Igloo](https://igloo.shop/)
