--- a/app/work/posts/joymode.mdx
+++ b/app/work/posts/joymode.mdx
@@ -1,16 +1,17 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'Natural male health supplements, Shopify Native'
 name: 'Joymode'
 publishedAt: '2024-07'
 summary: ''
 image: '/images/joymode/Joymode-1.jpeg'
+link: 'https://www.tryjoymode.com'
 ---
+
+Creation of landing pages with versatile designs, allowing sections to be reused across multiple pages for a cohesive and flexible layout.
 
 ***
 
 ### Landing page
-
-Creation of landing pages with versatile designs, allowing sections to be reused across multiple pages for a cohesive and flexible layout.
 
 ![alt text](/images/joymode/Joymode-1.jpeg)
 
@@ -21,7 +22,3 @@ Creation of landing pages with versatile designs, allowing sections to be reused
 ![alt text](/images/joymode/Joymode-5.jpeg)
 
 ![alt text](/images/joymode/Joymode-3.jpeg)
-
-***
-
-[Joymode](https://www.tryjoymode.com/)
