--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -1,16 +1,17 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'High quality vape products, Shopify Native'
 name: 'Vybevape'
 publishedAt: '2022-10'
 summary: ''
 image: '/images/vybevape/Vybevape-5.jpeg'
+link: 'https://puffvybe.com'
 ---
+
+A simple website design focused on showcasing products and facilitating sales, providing a user-friendly experience that makes browsing and purchasing easy.
 
 ***
 
-### PDP hero
-
-A simple website design focused on showcasing products and facilitating sales, providing a user-friendly experience that makes browsing and purchasing easy.
+### Hero section
 
 ![alt text](/images/vybevape/Vybevape-5.jpeg)
 
@@ -20,10 +21,6 @@ A simple website design focused on showcasing products and facilitating sales, p
 
 ### Collection page
 
-A product grid displaying items in a clean, organized layout, allowing users to browse products easily and quickly access key information and purchase options.
-
-![alt text](/images/vybevape/Vybevape-3.jpeg)
-
 ![alt text](/images/vybevape/Vybevape-4.jpeg)
 
 ![alt text](/images/vybevape/Vybevape-6.jpeg)
@@ -32,12 +29,6 @@ A product grid displaying items in a clean, organized layout, allowing users to 
 
 ### Footer
 
-A responsive footer designed to adapt to any device, featuring essential links, contact information, and social media icons for easy navigation and accessibility.
-
 ![alt text](/images/vybevape/Vybevape-2.jpeg)
 
 ![alt text](/images/vybevape/Vybevape-7.jpeg)
-
-***
-
-[Vybevape](https://puffvybe.com/)
