--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -1,16 +1,21 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'Professional hair styling tools, Shopify Native'
 name: 'Wavytalk'
 publishedAt: '2024-08'
 summary: ''
 image: '/images/wavytalk/Wavytalk-1.jpeg'
+link: 'https://wavytalk.com'
 ---
+
+Website dedicated to selling high-quality hair tools, featuring product highlights, customer reviews, and easy purchasing options.
+
+Includes a collection page with filtering and sorting options, that allow users to easily browse and find specific items based on preferences.
+
+One challenging aspect was a section with a complex, responsive design that adapts seamlessly to different device sizes, ensuring an optimal user experience across all screens.
 
 ***
 
 ### Hero
-
-Website dedicated to selling high-quality hair tools, featuring product highlights, customer reviews, and easy purchasing options.
 
 ![alt text](/images/wavytalk/Wavytalk-1.jpeg)
 
@@ -20,19 +25,13 @@ Website dedicated to selling high-quality hair tools, featuring product highligh
 
 ### Collection page
 
-Collection page with filtering and sorting options, allowing users to easily browse and find specific items based on preferences.
-
 ![alt text](/images/wavytalk/Wavytalk-5.jpeg)
-
-![alt text](/images/wavytalk/Wavytalk-6.jpeg)
 
 ![alt text](/images/wavytalk/Wavytalk-4.jpeg)
 
 ***
 
-### Repeatable section
-
-Section with a complex, responsive design that adapts seamlessly to different device sizes, ensuring an optimal user experience across all screens.
+### Non-traditional layout
 
 ![alt text](/images/wavytalk/Wavytalk-7.jpeg)
 
@@ -42,10 +41,4 @@ Section with a complex, responsive design that adapts seamlessly to different de
 
 ### Product slider
 
-Product card slider with hover transitions, allowing users to scroll through items and view additional details on hover for a more interactive experience.
-
 ![alt text](/images/wavytalk/Wavytalk-8.jpeg)
-
-***
-
-[Wavytalk](https://wavytalk.com/)
