--- a/app/work/posts/park-ave.mdx
+++ b/app/work/posts/park-ave.mdx
@@ -1,16 +1,17 @@
 ---
-title: 'Ecommerce, PHP, Headless CMS'
+title: 'NYC building supplier marketing website, Prismic CMS'
 name: 'Park Ave'
 publishedAt: '2024-01'
 summary: ''
 image: '/images/park-ave/Parkave-1.jpeg'
+link: 'https://parkavebuilding.com'
 ---
+
+Interactive website for connecting with a construction company, featuring project galleries, service details, and easy contact options for inquiries.
 
 ***
 
 ### Home hero
-
-Interactive website for connecting with a construction company, featuring project galleries, service details, and easy contact options for inquiries.
 
 ![alt text](/images/park-ave/Parkave-1.jpeg)
 
@@ -22,15 +23,11 @@ Interactive website for connecting with a construction company, featuring projec
 
 ### Horizontal scrolling
 
-Section with horizontal scrolling, allowing users to browse content smoothly from side to side for a unique, engaging experience.
-
 ![alt text](/images/park-ave/Parkave-2.jpeg)
 
 ***
 
 ### Footer
-
-Clean, functional footer with essential links, contact info, and social media icons, designed for easy navigation.
 
 ![alt text](/images/park-ave/Parkave-3.jpeg)
 
@@ -38,12 +35,6 @@ Clean, functional footer with essential links, contact info, and social media ic
 
 ### Page hero
 
-Page hero with a responsive design that adapts seamlessly to any device size, ensuring a visually appealing experience across all screens.
-
 ![alt text](/images/park-ave/Parkave-4.jpeg)
 
 ![alt text](/images/park-ave/Parkave-5.jpeg)
-
-***
-
-[Park Avenue](https://parkavebuilding.com/)
