--- a/app/work/posts/supervibe.mdx
+++ b/app/work/posts/supervibe.mdx
@@ -1,16 +1,18 @@
 ---
-title: 'Ecommerce, Shopify Native'
+title: 'Green tea infused energy bars, Shopify Native'
 name: 'Supervibe'
 publishedAt: '2022-12'
 summary: ''
 image: '/images/supervibe/Supervibe-1.jpeg'
+link: 'https://supervibe.co'
 ---
+An interactive website featuring multiple floating elements that engage users through animations and interactions, enhancing the overall experience and encouraging exploration.
+
+Includes a responsive menu and mini cart designed for seamless navigation and easy access to shopping features on any device, enhancing user convenience. Interactive product cards engage users with animations, enhancing the shopping experience.
 
 ***
 
 ### Floating elements
-
-An interactive website featuring multiple floating elements that engage users through animations and interactions, enhancing the overall experience and encouraging exploration.
 
 ![alt text](/images/supervibe/Supervibe-1.jpeg)
 
@@ -22,22 +24,14 @@ An interactive website featuring multiple floating elements that engage users th
 
 ### Product cards
 
-Interactive product cards that engage users with animations, enhancing the shopping experience.
-
 ![alt text](/images/supervibe/Supervibe-5.jpeg)
 
 ![alt text](/images/supervibe/Supervibe-6.jpeg)
 
-*** 
+***
 
-### Responsive menu and minicart 
-
-A responsive menu and mini cart designed for seamless navigation and easy access to shopping features on any device, enhancing user convenience.
+### Responsive menu and minicart
 
 ![alt text](/images/supervibe/Supervibe-2.jpeg)
 
 ![alt text](/images/supervibe/Supervibe-3.jpeg)
-
-***
-
-[Supervibe](https://supervibe.co/)
