--- a/app/work/posts/crescentdays.mdx
+++ b/app/work/posts/crescentdays.mdx
@@ -8,7 +8,7 @@ link: 'https://crescentdays.com/blogs/blog-index'
 ---
 A dynamic and interactive blog page designed to engage users and encourage participation. It features well-structured, categorized articles. Animation that syncs the sidebar menu with article headings: clicking on a menu item smoothly scrolls to the selected section, making navigation seamless.
 
-Interactive blog carousel featuring slides of highlighted articles with images, titles, and brief descriptions for easy browsing..
+Interactive blog carousel featuring slides of highlighted articles with images, titles, and brief descriptions for easy browsing.
 
 ***
 
