favicon, title, design credit

--- a/app/work/posts/deeps.mdx
+++ b/app/work/posts/deeps.mdx
@@ -5,6 +5,8 @@ publishedAt: '2022-04'
 summary: ''
 image: '/images/deeps/Deeps-1.jpeg'
 link: 'https://getdeeps.com'
+designCredit: 'Ryan Strzok'
+designCreditLink: 'https://ryanstrzok.com'
 ---
 Hero section with a full-width image and responsive design, ensuring a visually impactful experience across all devices.
 
