--- a/app/work/posts/homebody.mdx
+++ b/app/work/posts/homebody.mdx
@@ -5,6 +5,8 @@ publishedAt: '2023-07'
 summary: ''
 image: '/images/homebody/Homebody-1.jpeg'
 link: 'https://stayhomebody.com'
+designCredit: 'Herman Scheer'
+designCreditLink: 'https://www.herman-scheer.com'
 ---
 
 Two unique sliders: one for showcasing featured images and another for highlighting customer testimonials, each designed to enhance user engagement with smooth, interactive transitions.
