--- a/app/work/posts/igloo.mdx
+++ b/app/work/posts/igloo.mdx
@@ -5,6 +5,8 @@ publishedAt: '2023-11'
 summary: ''
 image: '/images/igloo/Igloo-6.jpg'
 link: 'https://igloo.shop'
+designCredit: 'Bureaux'
+designCreditLink: 'https://bureaux.us'
 ---
 
 Responsive product detail page (PDP) with options and information tabs for each product, allowing users to explore details and make selections easily on any device.
