--- a/app/work/posts/park-ave.mdx
+++ b/app/work/posts/park-ave.mdx
@@ -5,6 +5,8 @@ publishedAt: '2024-01'
 summary: ''
 image: '/images/park-ave/Parkave-1.jpeg'
 link: 'https://parkavebuilding.com'
+designCredit: 'Bureaux'
+designCreditLink: 'https://bureaux.us'
 ---
 
 Interactive website for connecting with a construction company, featuring project galleries, service details, and easy contact options for inquiries.
