--- a/app/work/posts/supervibe.mdx
+++ b/app/work/posts/supervibe.mdx
@@ -5,6 +5,8 @@ publishedAt: '2022-12'
 summary: ''
 image: '/images/supervibe/Supervibe-1.jpeg'
 link: 'https://supervibe.co'
+designCredit: 'Bureaux'
+designCreditLink: 'https://bureaux.us'
 ---
 An interactive website featuring multiple floating elements that engage users through animations and interactions, enhancing the overall experience and encouraging exploration.
 
