--- a/app/work/posts/vybevape.mdx
+++ b/app/work/posts/vybevape.mdx
@@ -5,6 +5,8 @@ publishedAt: '2022-10'
 summary: ''
 image: '/images/vybevape/Vybevape-5.jpeg'
 link: 'https://puffvybe.com'
+designCredit: 'Bureaux'
+designCreditLink: 'https://bureaux.us'
 ---
 
 A simple website design focused on showcasing products and facilitating sales, providing a user-friendly experience that makes browsing and purchasing easy.
