--- a/app/work/posts/wavytalk.mdx
+++ b/app/work/posts/wavytalk.mdx
@@ -5,6 +5,8 @@ publishedAt: '2024-08'
 summary: ''
 image: '/images/wavytalk/Wavytalk-1.jpeg'
 link: 'https://wavytalk.com'
+designCredit: 'Red Antler'
+designCreditLink: 'https://www.redantler.com'
 ---
 
 Website dedicated to selling high-quality hair tools, featuring product highlights, customer reviews, and easy purchasing options.
